Change title on main page

--- a/clients/web/index.html
+++ b/clients/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decky Boiii's Stats</title>
+    <title>Arduino Dashboard</title>
     <link rel="stylesheet" href="css/home.css">
 </head>
 
