--- a/clients/web/template.html
+++ b/clients/web/template.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <div id="profile">
+        <img src="assets/pfp.png">
+    </div>
+
     <div id="grid-container">
         <div class="panel" id="panel-1">
             <div>
