add redirect to template for those who want to see more

--- a/clients/web/index.html
+++ b/clients/web/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <button style="padding: 8px; border-radius: 8px; border-width: 1px; border-style: solid; background-color: #2b2b2b; color: #ffffff; border-color: #606060;" onclick="document.location='https:\/\/arduino.declan-reid.me/Dashboard/template.html'">
+        Template (it might show more)
+    </button>
+
     <div id="grid-container">
     </div>
 </body>
